# MedNex

./: .gitignore  BACKEND_FRONTEND_INTEGRATION_REPORT.md  BUG_FIX_HISTORY_PAGE.md  BUG_FIX_HISTORY_ZERO_VALUES.md  BUG_FIX_UNAUTHORIZED_ACCESS.md  CONTRIBUTING.md  FINAL_SUMMARY.md  INTEGRATION_SUMMARY.md  INTEGRATION_VERIFICATION_COMPLETE.md  LICENSE  README.md  pyproject.toml  test_e2e_integration.py  verify_integration.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
mednex-backend/: .env.example  create_admin.py  create_test_users.py  main.py  package-lock.json  package.json  production_config.py  reload-env.ps1  render.yaml  requirements-prod.txt  requirements.txt  setup.py  test-registration.ps1  test_all_endpoints.py  test_backend.py  test_db_password.py  test_password_hash.py  verify_integration.py
mednex-backend/data/: disease_symptom_dataset.csv
mednex-backend/database/: mongodb_client.py  supabase_client.py
mednex-backend/models/: biobert_ner.py  llama_reasoning.py  user.py
mednex-backend/routers/: __init__.py  admin.py  auth.py  chat.py  customer.py  explanation.py  graph.py  prediction.py  symptoms.py
mednex-backend/services/: disease_matcher.py  graph_builder.py
mednex-backend/utils/: __init__.py  auth.py
mednex-frontend/: clear-cache-simple.ps1  clear-cache.ps1  next.config.ts  package-lock.json  package.json  test-frontend.js
mednex-frontend/lib/: api.ts  (+3 more)
scripts/: debug_prediction.py  debug_test.py  setup.bat  setup.sh  test_integration.py  verify_structure.py
(+18 files in other folders)
